--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.7.2",
     "body-parser": "^1.19.0",
     "broccoli-asset-rev": "^2.2.0",
     "ember-cli": "1.13.15",
@@ -32,8 +33,6 @@
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-qunit": "^1.0.4",
     "ember-cli-release": "0.2.8",
-    "ember-cli-simple-auth": "^0.8.0",
-    "ember-cli-simple-auth-token": "^0.7.3",
     "ember-cli-sri": "^1.2.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "1.13.15",
@@ -44,5 +43,6 @@
     "glob": "^4.5.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1"
-  }
+  },
+  "dependencies": {}
 }
